refactor: alinear savinggoals con la funcionalidad y requisitos actuales