@@ -14,78 +14,115 @@ import org.springframework.stereotype.Repository;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Repository
 public class SavingsGoalPostgresAdapter implements SavingsGoalRepository {
 
-    private final JpaSavingsGoalRepository jpaRepository;
-    private final SavingsGoalEntityMapper mapper;
+private final JpaSavingsGoalRepository jpaRepository;
+private final SavingsGoalEntityMapper mapper;
 
-    public SavingsGoalPostgresAdapter(JpaSavingsGoalRepository jpaRepository, SavingsGoalEntityMapper mapper) {
-        this.jpaRepository = jpaRepository;
-        this.mapper = mapper;
+public SavingsGoalPostgresAdapter(
+        JpaSavingsGoalRepository jpaRepository,
+        SavingsGoalEntityMapper mapper
+) {
+    this.jpaRepository = jpaRepository;
+    this.mapper = mapper;
+}
+
+@Override
+public SavingsGoal save(SavingsGoal savingsGoal) {
+    SavingsGoalEntity entity = mapper.toEntity(savingsGoal);
+
+    SavingsGoalEntity savedEntity = jpaRepository.save(entity);
+
+    return mapper.toDomain(savedEntity);
+}
+
+@Override
+public Optional<SavingsGoal> findById(UUID id) {
+    return jpaRepository.findById(id)
+            .map(mapper::toDomain);
+}
+
+@Override
+public Optional<SavingsGoal> findByIdAndUserId(
+        UUID id,
+        UUID userId
+) {
+    return jpaRepository.findByIdAndUserId(id, userId)
+            .map(mapper::toDomain);
+}
+
+@Override
+public List<SavingsGoal> findAllByUserId(UUID userId) {
+    return jpaRepository
+            .findAllByUserIdAndActiveTrue(userId)
+            .stream()
+            .map(mapper::toDomain)
+            .toList();
+}
+
+private Specification<SavingsGoalEntity> buildSpecification(
+        UUID userId,
+        String search
+) {
+    Specification<SavingsGoalEntity> spec =
+            (root, query, cb) ->
+                    cb.equal(root.get("userId"), userId);
+
+    spec = spec.and(
+            (root, query, cb) ->
+                    cb.equal(root.get("active"), true)
+    );
+
+    if (search != null && !search.isBlank()) {
+        String pattern = "%" + search.toLowerCase() + "%";
+
+        spec = spec.and(
+                (root, query, cb) ->
+                        cb.like(
+                                cb.lower(root.get("name")),
+                                pattern
+                        )
+        );
     }
 
-    @Override
-    public SavingsGoal save(SavingsGoal savingsGoal) {
-        SavingsGoalEntity entity = mapper.toEntity(savingsGoal);
-        SavingsGoalEntity savedEntity = jpaRepository.save(entity);
-        return mapper.toDomain(savedEntity);
-    }
+    return spec;
+}
 
-    @Override
-    public Optional<SavingsGoal> findById(UUID id) {
-        return jpaRepository.findById(id).map(mapper::toDomain);
-    }
+@Override
+public List<SavingsGoal> findAllByUserId(
+        UUID userId,
+        int page,
+        int size,
+        String search
+) {
+    Specification<SavingsGoalEntity> spec =
+            buildSpecification(userId, search);
 
-    @Override
-    public Optional<SavingsGoal> findByIdAndUserId(UUID id, UUID userId) {
-        return jpaRepository.findByIdAndUserId(id, userId).map(mapper::toDomain);
-    }
+    Page<SavingsGoalEntity> result =
+            jpaRepository.findAll(
+                    spec,
+                    PageRequest.of(
+                            page,
+                            size,
+                            Sort.by("createdAt").descending()
+                    )
+            );
 
-    @Override
-    public List<SavingsGoal> findAllByUserId(UUID userId) {
-        return jpaRepository.findAllByUserIdAndActiveTrue(userId).stream()
-                .map(mapper::toDomain)
-                .collect(Collectors.toList());
-    }
+    return result.getContent()
+            .stream()
+            .map(mapper::toDomain)
+            .toList();
+}
 
-    @Override
-    public List<SavingsGoal> findAllByUserIdAndStatus(UUID userId, String status) {
-        return jpaRepository.findByUserIdAndStatusAndActiveTrue(userId, status).stream()
-                .map(mapper::toDomain)
-                .collect(Collectors.toList());
-    }
-
-    private Specification<SavingsGoalEntity> buildSpecification(UUID userId, String search, String status) {
-        Specification<SavingsGoalEntity> spec = (root, query, cb) -> cb.equal(root.get("userId"), userId);
-        spec = spec.and((root, query, cb) -> cb.equal(root.get("active"), true));
-
-        if (search != null && !search.isBlank()) {
-            String pattern = "%" + search.toLowerCase() + "%";
-            spec = spec.and((root, query, cb) -> cb.like(cb.lower(root.get("name")), pattern));
-        }
-
-        if (status != null && !status.isBlank()) {
-            spec = spec.and((root, query, cb) -> cb.equal(root.get("status"), status.toUpperCase()));
-        }
-
-        return spec;
-    }
-
-    @Override
-    public List<SavingsGoal> findAllByUserId(UUID userId, int page, int size, String search, String status) {
-        Specification<SavingsGoalEntity> spec = buildSpecification(userId, search, status);
-        Page<SavingsGoalEntity> result = jpaRepository.findAll(spec,
-                PageRequest.of(page, size, Sort.by("createdAt").descending()));
-        return result.getContent().stream()
-                .map(mapper::toDomain)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public long countByUserIdAndFilters(UUID userId, String search, String status) {
-        return jpaRepository.count(buildSpecification(userId, search, status));
-    }
+@Override
+public long countByUserIdAndFilters(
+        UUID userId,
+        String search
+) {
+    return jpaRepository.count(
+            buildSpecification(userId, search)
+    );
+}
 }
